fix app scroll
the margins on the app were causing extra space that allowed scrolling.
we dont like scrolling on mobile apps.
at least i dont.

--- a/mcp_mobile_app/www/css/index.css
+++ b/mcp_mobile_app/www/css/index.css
@@ -49,11 +49,7 @@ body {
 }
 
 .app-home {
-  border-top: 2px solid white;
-  border-bottom: 2px solid white;
-  width: 80%;
-  height: 80%;
-  margin: 10%;
+  padding: 10%;
   margin-bottom: 0px;
   text-align: center;
 }
